--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,6 +1,7 @@
 name: Github Actions Project 
-on: push
-  branches: [ "main" ]
+on: 
+  push:
+    branches: [ "main" ]
 
 jobs:
   nax-githubactions: 
