--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,10 +1,8 @@
 name: Github Actions Project 
 on: 
   push:
-    branches: 
-      - 'main'
-    tags:
-      - 'v*'
+    branches: [ "main" ]
+    tags: [ "v*" ]
 
 jobs:
   nax-githubactions: 
@@ -26,9 +24,10 @@ jobs:
         with: 
           images: ilhanbzn/githubactions
           tags: |
-            type=ref,event=branch
+            type=ref,event=pull
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
+
         
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
