--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,7 +2,7 @@ name: Github Actions Project
 on: 
   push:
     branches: [ "main" ]
-    tags: [ "v*" ]
+    tags: [ "v1.0.2" ]
 
 jobs:
   nax-githubactions: 
@@ -24,7 +24,7 @@ jobs:
         with: 
           images: ilhanbzn/githubactions
           tags: |
-            type=ref,event=branch
+            type=ref,event=tags
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
 
