--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,7 +10,11 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - name: Check out the repo
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
+      - uses: haya14busa/action-update-semver@v1
+        id: version
+        with:
+          major_version_tag_only: true 
     
       - name: Login to Dockerhub
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
@@ -21,20 +25,20 @@ jobs:
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-        with:
+        with: 
           images: ilhanbzn/githubactions
 
-      - name: Get Tag
-        id: vars
-        run: echo ::set-output name=tag::${git describe --abbrev=0}
-
-      - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag my-image-name:${{ steps.vars.outputs.tag }}
         
-      # - name: Build and push Docker image
-      #   uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-      #   with:
-      #     context: .
-      #     push: true
-      #     tags: ${{ steps.meta.outputs.tags }}
-      #     labels: ${{ steps.meta.outputs.labels }}
+      - name: Build and push Docker image
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+      - name: Build image
+        run: |
+          tag_v=$(git describe --tags $(git rev-list --tags --max-count=1))
+          tag=$(echo $tag_v | sed 's/v//')
+          docker build -t my_image_${tag} .
+
