--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,19 +10,14 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - name: Check out the repo
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
         env: 
           DOCKER_USER: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
           REPO_NAME: ${{ secrets.REPO_NAME }}
-      - name: Login to Dockerhub
-      - uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-        with: 
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
         run: |
           docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-
+      
       - name: Get current date # get the date of the build
         id: date
         run: echo "::set-output name=date::$(date +'%Y-%m-%d--%M-%S')"
