--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: docker login
         env: 
-          DOCKER_USER: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
           REPO_NAME: ${{ secrets.REPO_NAME }}
         run: |
@@ -22,10 +22,10 @@ jobs:
         id: date
         run: echo "::set-output name=date::$(date +'%Y-%m-%d--%M-%S')"
       - name: Build the Docker image
-        run: docker build /Users/ilhan/Desktop/my-projects/github-actions-projects/ --file Dockerfile ${{secrets.DOCKER_HUB_USER}}/${{secrets.REPO_NAME}}:${{steps.date.outputs.date}}
+        run: docker build /Users/ilhan/Desktop/my-projects/github-actions-projects/ --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/${{secrets.REPO_NAME}}:${{ steps.date.outputs.date }}
       
       - name: Push_Image
-        run: docker push ${{secrets.DOCKER_HUB_USER}}/${{secrets.REPO_NAME}}:${{steps.date.outputs.date}}
+        run: docker push ${{secrets.DOCKER_USERNAME}}/${{secrets.REPO_NAME}}:${{steps.date.outputs.date}}
 
 
           
