--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -40,7 +40,7 @@ jobs:
       #     tags: ${{ steps.metadata.outputs.tags }}
         
       - name: Build the Docker image
-        run: docker build .. --file Dockerfile -t ${{ secrets.DOCKER_USERNAME }}/${{secrets.REPO_NAME}}:${{ steps.metadata.outputs.tags }}
+        run: docker build --file ~/Desktop/my-projects/github-actions-projects/Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/${{secrets.REPO_NAME}}:${{ steps.metadata.outputs.tags }} .
       
       - name: Push_Image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.REPO_NAME }}:${{ steps.metadata.outputs.tags }}
