--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -41,8 +41,8 @@ jobs:
         
       - name: Build the Docker image
         run: docker build .. --file ~/Desktop/my-projects/github-actions-projects/Dockerfile --tag "${{ secrets.DOCKER_USERNAME }}/${{ secrets.REPO_NAME }}:${{ steps.metadata.outputs.tags }}" 
-        with:
-          tags: 
+        # with:
+        #   tags: 
 
       
       - name: Push_Image
