--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -41,6 +41,8 @@ jobs:
         
       - name: Build the Docker image
       - uses: docker/build-push-action@v3
+
+      - name: Build Docker
         run: docker build .. --file ~/Desktop/my-projects/github-actions-projects/Dockerfile --tag "${{ secrets.DOCKER_USERNAME }}/${{ secrets.REPO_NAME }}:${{ steps.metadata.outputs.tags }}" .
       
       - name: Push_Image
