--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -33,7 +33,7 @@ jobs:
           docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v3
+      - uses: docker/build-push-action@v3
         run: docker build .. --file ~/Desktop/my-projects/github-actions-projects/Dockerfile --tag "${{ secrets.DOCKER_USERNAME }}/${{ secrets.REPO_NAME }}:${{ steps.metadata.outputs.tags }}" .
         with:
           context: .
