--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -32,20 +32,20 @@ jobs:
         run: |
           docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v3
-        with:
-          context: ../
-          push: docker build --file Dockerfile --tag "${{ secrets.DOCKER_USERNAME }}/${{ secrets.REPO_NAME }}
-          tags: ${{ steps.metadata.outputs.tags }}
-        
-      # - name: Build the Docker image
+      # - name: Build and push Docker image
       #   uses: docker/build-push-action@v3
+      #   with:
+      #     context: .
+      #     push: ${{ secrets.DOCKER_USERNAME }}/${{ secrets.REPO_NAME }}
+      #     tags: ${{ steps.metadata.outputs.tags }}
+        
+      - name: Build the Docker image
+        uses: docker/build-push-action@v3
 
-      # - name: Build Docker
-      #   run: docker build .. --file ~/Desktop/my-projects/github-actions-projects/Dockerfile --tag "${{ secrets.DOCKER_USERNAME }}/${{ secrets.REPO_NAME }}:${{ steps.metadata.outputs.tags }}" .
+      - name: Build Docker
+        run: docker build --file ~/Desktop/my-projects/github-actions-projects/Dockerfile --tag "${{ secrets.DOCKER_USERNAME }}/${{ secrets.REPO_NAME }}:${{ steps.metadata.outputs.tags }}" .
       
-      # - name: Push_Image
-      #   run: docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.REPO_NAME }}:${{ steps.metadata.outputs.tags }}
+      - name: Push_Image
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.REPO_NAME }}:${{ steps.metadata.outputs.tags }}
 
 
