--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -39,11 +39,11 @@ jobs:
       #     push: ${{ secrets.DOCKER_USERNAME }}/${{ secrets.REPO_NAME }}
       #     tags: ${{ steps.metadata.outputs.tags }}
         
-      - name: Build the Docker image
+      - name: Build and push the Docker image
         uses: docker/build-push-action@v3
 
       - name: Build Docker
-        run: docker build --file ~/Desktop/my-projects/github-actions-projects/Dockerfile --tag "${{ secrets.DOCKER_USERNAME }}/${{ secrets.REPO_NAME }}:${{ steps.metadata.outputs.tags }}" .
+        run: docker build --file ~/Desktop/my-projects/github-actions-projects/Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/${{ secrets.REPO_NAME }}:${{ steps.metadata.outputs.tags }} .
       
       - name: Push_Image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.REPO_NAME }}:${{ steps.metadata.outputs.tags }}
