--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -43,12 +43,14 @@ jobs:
         uses: docker/build-push-action@v3
 
       - name: Build Docker
-        run: docker build --file ~/Desktop/my-projects/github-actions-projects/Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/${{ secrets.REPO_NAME }} .
+        run: docker build --file ~/Desktop/my-projects/github-actions-projects/Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/${{ secrets.REPO_NAME }} 
         with:
+          context: ..
           tags: ${{ steps.metadata.outputs.tags }}
       
       - name: Push_Image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.REPO_NAME }}
         with:
+          context: ..
           tags: ${{ steps.metadata.outputs.tags }}
 
