--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,26 +3,11 @@ on:
   push:
     branches: [ "main" ]
 
-
 jobs:
   nax-githubactions: 
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
-    env:
-      IMG_NAME: ${{ secrets.DOCKER_USERNAME }}/${{ secrets.REPO_NAME }}
     steps: 
-      - name: Check out the repo
-        uses: actions/checkout@v3
-
-      - name: Docker metadata
-        id: metadata
-        uses: docker/metadata-action@v3
-        with:
-          images: ${{ env.IMG_NAME }}
-          tags: |
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-    
       - uses: actions/checkout@v3
       - name: docker login
         env: 
@@ -31,17 +16,14 @@ jobs:
           REPO_NAME: ${{ secrets.REPO_NAME }}
         run: |
           docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-
-      # - name: Build and push Docker image
-      #   uses: docker/build-push-action@v3
-      #   with:
-      #     context: .
-      #     push: ${{ secrets.DOCKER_USERNAME }}/${{ secrets.REPO_NAME }}
-      #     tags: ${{ steps.metadata.outputs.tags }}
-        
+      
+      - name: Get current date # get the date of the build
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d--%M-%S')"
       - name: Build the Docker image
-        run: docker build .. --file Dockerfile ${{ secrets.DOCKER_USERNAME }}/${{secrets.REPO_NAME}}:${{ steps.date.outputs.date }}
+        run: docker build .. --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/${{secrets.REPO_NAME}}:${{ steps.date.outputs.date }}
       
       - name: Push_Image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.REPO_NAME }}:${{steps.date.outputs.date}}
 
+        
