--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -38,11 +38,12 @@ jobs:
       - name: Tags
         run: |
           docker tag back ${{ secrets.DOCKER_USERNAME }}/${{ secrets.REPO_NAME }}/${{secrets.REPO_NAME}}:latest
+          docker tag back ${{ secrets.DOCKER_USERNAME }}/back:latest
 
       - name: Push
         run: |
           docker push ${{ secrets.DOCKER_USERNAME }}/${{secrets.REPO_NAME}}:latest
-   
+          docker tag back ${{ secrets.DOCKER_USERNAME }}/back:latest
 
 
 
