--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -22,28 +22,47 @@ jobs:
           tags: |
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
-    
-      - uses: actions/checkout@v3
-      - name: docker login
-        env: 
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-          REPO_NAME: ${{ secrets.REPO_NAME }}
-        run: |
-          docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
 
-      - name: Build
-        run: docker build .. --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/${{secrets.REPO_NAME}}
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: ${{ 
+            github.event.base_ref =='refs/heads/main' && 
+            github.ref_type == 'tag' && 
+            !startsWith(github.ref, 'refs/tags/v0.') 
+          }}
+          tags: ${{ steps.metadata.outputs.tags }}
+          labels: ${{ steps.metadata.outputs.labels }}
+
+          
+      # - uses: actions/checkout@v3
+      # - name: docker login
+      #   env: 
+      #     DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+      #     DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+      #     REPO_NAME: ${{ secrets.REPO_NAME }}
+      #   run: |
+      #     docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+
+      # - name: Build
+      #   run: docker build .. --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/${{secrets.REPO_NAME}}
       
-      - name: Tags
-        run: |
-          docker tag back ${{ secrets.DOCKER_USERNAME }}/${{ secrets.REPO_NAME }}/${{secrets.REPO_NAME}}:latest
-          docker tag back ${{ secrets.DOCKER_USERNAME }}/back:latest
+      # - name: Tags
+      #   run: |
+      #     docker tag back ${{ secrets.DOCKER_USERNAME }}/${{ secrets.REPO_NAME }}/${{secrets.REPO_NAME}}:latest
+      #     docker tag back ${{ secrets.DOCKER_USERNAME }}/back:latest
 
-      - name: Push
-        run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/${{secrets.REPO_NAME}}:latest
-          docker tag back ${{ secrets.DOCKER_USERNAME }}/back:latest
+      # - name: Push
+      #   run: |
+      #     docker push ${{ secrets.DOCKER_USERNAME }}/${{secrets.REPO_NAME}}:latest
+      #     docker tag back ${{ secrets.DOCKER_USERNAME }}/back:latest
 
 
 
