--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -38,7 +38,7 @@ jobs:
           tags: ${{ steps.metadata.outputs.tags }}
 
       - name: Build the Docker image
-        run: run: docker build -t ${{ secrets.DOCKER_USERNAME }}/${{secrets.REPO_NAME}}:${{ steps.date.outputs.date }} .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/${{secrets.REPO_NAME}}:${{ steps.metadata.outputs.tags }} .
       
       - name: Push_Image
         run: docker push ${{ env.IMG_NAME }}:${{ steps.metadata.outputs.tags }}
