--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,31 +17,36 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Docker metadata
-        id: metadata
-        uses: docker/metadata-action@v3
+        id: meta
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: ${{ env.IMG_NAME }}
+          images: |
+            ${{ env.IMG_NAME }}
           tags: |
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
 
       - name: Log in to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           context: .
-          tags: ${{ steps.metadata.outputs.tags }}
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
 
-      - name: Build the Docker image
-        run: docker build . ${{ secrets.DOCKER_USERNAME }}/${{secrets.REPO_NAME}}:${{ steps.metadata.outputs.tags }} 
+
+
+      # - name: Build the Docker image
+      #   run: docker build . ${{ secrets.DOCKER_USERNAME }}/${{secrets.REPO_NAME}}:${{ steps.metadata.outputs.tags }} 
       
-      - name: Push_Image
-        run: docker push ${{ env.IMG_NAME }}:${{ steps.metadata.outputs.tags }}
+      # - name: Push_Image
+      #   run: docker push ${{ env.IMG_NAME }}:${{ steps.metadata.outputs.tags }}
 
 
           
