--- a/docker-image-v2.yml
+++ b/docker-image-v2.yml
@@ -4,34 +4,35 @@ on:
   push:
     branches:
       - 'main'
+    tags:
+      - 'v*'
 
 jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      IMG_NAME: ilhanbzn/githubactions
+      IMG_NAME: muratyarali/githubactions
 
     steps:
-      -
-        name: Checkout 
+      - name: Checkout 
         uses: actions/checkout@v2
-      -
-        name: Login to Docker Hub
+
+      - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      -
-        name: Set up Docker Buildx
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      -
-        name: Build and push
+
+      - name: Build and push
         uses: docker/build-push-action@v2
         with:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ env.IMG_NAME }}:v1.0.0, ${{ env.IMG_NAME }}:latest
+          tags: ${{ env.IMG_NAME }}:v1.0.4, ${{ env.IMG_NAME }}:latest
 
       - name: Run the build process with Docker
         uses: addnab/docker-run-action@v3
@@ -39,4 +40,4 @@ jobs:
             image: ${{ env.IMG_NAME }}:latest
             options: -v ${{ github.workspace }}:/var/www
             run: |
-                python ./hello.py    
+                python ./hello.py
