--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -39,4 +39,7 @@ jobs:
             image: ${{ env.IMG_NAME }}:latest
             options: -v ${{ github.workspace }}:/var/www
             run: |
+                composer install
+                npm install
+                npm run production
                 python ./hello.py
