--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -39,7 +39,5 @@ jobs:
             image: ${{ env.IMG_NAME }}:latest
             options: -v ${{ github.workspace }}:/var/www
             run: |
-                composer install
-                npm install
-                npm run production
+                curl +x http://localhost:80
                 python ./hello.py
